Fix Safari captcha visibility issue

--- a/_css/molecules/component-form.scss
+++ b/_css/molecules/component-form.scss
@@ -23,9 +23,13 @@
       margin-bottom: calc(0.5 * var(--spacer));
     }
 
-    .component__form-label-inline {
+    .component__form-label-inline, .jCaptchaCanvas {
       display: inline-block;
       margin-bottom: calc(0.5 * var(--spacer));
+    }
+
+    .jCaptchaCanvas {
+      vertical-align: top;
     }
   }
 }
